--- a/StockSellRules/CheckStockSellRules.ipynb
+++ b/StockSellRules/CheckStockSellRules.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -48,12 +48,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas==1.1.3 in /usr/local/lib/python3.7/dist-packages (from -r StockSellRulesChecker/requirements.txt (line 1)) (1.1.3)\n",
-      "Requirement already satisfied: stockquotes==2.0.1 in /usr/local/lib/python3.7/dist-packages (from -r StockSellRulesChecker/requirements.txt (line 2)) (2.0.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas==1.1.3->-r StockSellRulesChecker/requirements.txt (line 1)) (2018.9)\n",
-      "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas==1.1.3->-r StockSellRulesChecker/requirements.txt (line 1)) (1.19.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.1.3->-r StockSellRulesChecker/requirements.txt (line 1)) (2.8.1)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas==1.1.3->-r StockSellRulesChecker/requirements.txt (line 1)) (1.15.0)\n"
+      "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'StockSellRulesChecker/requirements.txt'\u001b[0m\r\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'StockSellRulesChecker'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-979796caaad7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' pip install -r StockSellRulesChecker/requirements.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mStockSellRulesChecker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCheckSellRules\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSellRuleChecker\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstockquotes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'StockSellRulesChecker'"
      ]
     }
    ],
@@ -66,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -74,22 +80,7 @@
     "id": "OFlORJREQPSb",
     "outputId": "af3c3ffb-88da-4471-b022-ffa292e9199b"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------------\n",
-      "XPEL\n",
-      "Current Percent Gain/Loss: -3.52%\n",
-      "Do Not Sell Based on Golden Rule Check\n",
-      "Investment is too young, do not sell based on Standard Profit Goal Sell Rule.\n",
-      "Do Not Place a trailing stop based on the Decline from Peak Sell Rule\n",
-      "You do not need to hold for a full 8 weeks\n",
-      "---------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "symbol =\"XPEL\"\n",
     "avg_share_price = \"$64.48\"\n",
@@ -107,6 +98,13 @@
     "SellRuleChecker.bad_break_sell_rule(symbol)\n",
     "print(\"---------------------------------\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
