--- a/StockScreener/Screener.ipynb
+++ b/StockScreener/Screener.ipynb
@@ -21,25 +21,36 @@
     },
     "colab": {
       "name": "Screener.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jonlwowski012/StockSellRulesChecker/blob/master/StockScreener/Screener.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "jiQYNbnwycRf",
-        "outputId": "9f25f254-eb6c-4c1c-a7f7-18e68c5f9ad2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "9f25f254-eb6c-4c1c-a7f7-18e68c5f9ad2"
       },
       "source": [
         "! git clone https://github.com/jonlwowski012/StockSellRulesChecker.git\n",
         "! pip install -r StockSellRulesChecker/StockScreener/requirements.txt"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +151,7 @@
         "import tqdm\n",
         "nest_asyncio.apply()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,22 +165,22 @@
         "           'sh_curvol_o200'] \n",
         "stock_list = Screener(filters=filters, table='Performance', order='price')  "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "1XPzaeV1ycRi",
-        "outputId": "27e4f3e9-c952-4971-941d-7681b0fbde30",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "27e4f3e9-c952-4971-941d-7681b0fbde30"
       },
       "source": [
         "print(stock_list)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,10 +242,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "U8AVr63rycRi",
-        "outputId": "ab404b41-981f-4a62-c8ca-9d6998304486",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ab404b41-981f-4a62-c8ca-9d6998304486"
       },
       "source": [
         "def moving_average(yahoo_df, days):\n",
@@ -335,7 +346,7 @@
         "\n",
         "    \n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,16 +361,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "rcDK8f3RycRj",
-        "outputId": "32d2c5d5-3961-4a75-c477-1a0f509d28d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "32d2c5d5-3961-4a75-c477-1a0f509d28d5"
       },
       "source": [
         "df_out"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
